# 8voice

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  yapılacak planlar.md
.github/workflows/: release.yml
scripts/: generate-icons.py
src/: App.tsx  HistoryTab.tsx  Onboarding.tsx  history.ts  index.css  languages.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  hotkey.rs  inject.rs  lib.rs  onboarding.rs  settings.rs  sherpa_engine.rs  state.rs  transcribe.rs  tray.rs  vad.rs  vosk_engine.rs
src/widget/: Widget.tsx
